--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
                                 data-lang-ru="Telegram">Telegram</span><span class="link" data-lang-en="t.me/kovalsky_i"
                                 data-lang-ru="t.me/kovalsky_i">t.me/kovalsky_i</span></div>
                     </a></li>
-                <li><a href="https://www.twitch.tv/kovalsky_i"><img src="img/icons/twitch-icon.png" alt="Twitch">
+                <!-- <li><a href="https://www.twitch.tv/kovalsky_i"><img src="img/icons/twitch-icon.png" alt="Twitch">
                         <div class="text"><span class="title" data-lang-en="Twitch"
                                 data-lang-ru="Twitch">Twitch</span><span class="link"
                                 data-lang-en="twitch.tv/kovalsky_i"
                                 data-lang-ru="twitch.tv/kovalsky_i">twitch.tv/kovalsky_i</span></div>
-                    </a></li>
-                <li><a href="https://www.tiktok.com/@kovalsky_i?_t=8mplxERz8Zb&_r=1"><img
+                    </a></li> -->
+                <!-- <li><a href="https://www.tiktok.com/@kovalsky_i?_t=8mplxERz8Zb&_r=1"><img
                             src="img/icons/tiktok-icon.png" alt="TikTok">
                         <div class="text"><span class="title" data-lang-en="TikTok"
                                 data-lang-ru="TikTok">TikTok</span><span class="link"
                                 data-lang-en="tiktok.com/@kovalsky_i"
                                 data-lang-ru="tiktok.com/@kovalsky_i">tiktok.com/@kovalsky_i</span></div>
-                    </a></li>
+                    </a></li> -->
                 <li><a href="https://www.youtube.com/@kovalsky_i"><img src="img/icons/youtube-icon.png" alt="YouTube">
                         <div class="text"><span class="title" data-lang-en="YouTube"
                                 data-lang-ru="YouTube">YouTube</span><span class="link"
