--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="img/kovalsky_i.jpeg" alt="Ковальский" class="profile-image">
             <h1>kovalsky_i</h1>
             <p class="description" data-lang-en="Dreamer • Web Designer • Creator"
-                data-lang-ru="Мечтатель • Веб-дизайнер • Создатель">Мечтатель • Веб-дизайнер • Создатель</p>
+                data-lang-ru="Мечтатель • Веб-дизайнер • Создатель">Мечтатель • Веб-дизайнер</p>
         </div>
         <div class="tabs">
             <div class="btns">
